# FastAPI-Example

./: README.md
MyFirstFastPro/: working.py
communicateWithDB/: app.py  database.py  model.py
communicateWithLineBot/: requirements.txt  working.py
communicate_with_LineBot/: pyproject.toml
communicate_with_db/: app.py  pyproject.toml  requirements.txt  schema.py
migrate_with_db/: app.py  database.py  main.py  models.py  pyproject.toml
